--- a/test/nginx.conf
+++ b/test/nginx.conf
@@ -17,7 +17,7 @@ user http;
       default_type        application/octet-stream;
 
       server {
-          listen       80 proxy_protocol default_server;
+          listen       80 default_server;
           server_name  _;
 
           access_log /dev/stdout combined;
